Add config parser using in DB connection

--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -1,2 +1,2 @@
-database_driver = "zend_driver_name"
-database_name = "database_path"
+database_driver = "Pdo_Sqlite"
+database_name = "Database/pvi1.db"
