--- a/Config/Config.ini.example
+++ b/Config/Config.ini.example
@@ -1,2 +1,2 @@
-database_driver = "Pdo_Sqlite"
-database_name = "Database/notifier.db"
+database_driver = "zend_driver_name"
+database_name = "database_path"
